# django-never-cache

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.in  tox.ini
.github/workflows/: ci.yml  release.yml
django_never_cache/: apps.py  decorators.py  middelwares.py  mixins.py
tests/: settings.py  test_decorators.py  test_middlewares.py  test_views.py  urls.py
